rename some methods in HelpFormatter